--- a/README.html
+++ b/README.html
@@ -1,9 +1,16 @@
-<html>
-  <head>Intro
-  <title>Intro</title>
-  </head>
-  <body>
-    <h1>This File contains my all the C Languages Practie sets...!</h1>
-    <h2>It has all the contents that i have learned in my first semester in B.Tech</h2>
-  </body>
-</html>
+Welcome to the collection of practice sets I worked on during my B.Tech semester in Computer Science and Engineering at Abdul Kalam Technical University, Lucknow.
+
+This folder contains a variety of exercises and programs that helped me strengthen my understanding of C programming—a foundational language in computer science. These practice sets cover key concepts, including:
+
+------>Basics of C (variables, data types, operators)
+------>Control structures (if-else, loops, switch-case)
+------>Functions and recursion
+------>Arrays and strings
+------>Pointers and memory management
+------>File handling
+
+
+Each program is thoughtfully designed to reinforce both theoretical concepts and practical application. This compilation reflects my dedication to mastering programming fundamentals, which form the base for advanced learning and problem-solving in the field of software development.
+
+Feel free to explore and learn alongside!
+
